--- a/MOLPayXDKExample/Resources/molpay-mobile-xdk-www/views/finalizingpayment.html
+++ b/MOLPayXDKExample/Resources/molpay-mobile-xdk-www/views/finalizingpayment.html
@@ -1,1 +1,1 @@
-<p>Finalizing payment status.</p> <p>Please wait.</p>
+<div class="text-center vertical-center"> <p>Finalizing payment status.</p> <p>Please wait.</p> </div>
